--- a/components/tables/Slots.module.css
+++ b/components/tables/Slots.module.css
@@ -1,30 +1,17 @@
 .table {
   overflow-x: scroll;
   border-radius: 5px;
+  position: relative;
 }
 
 .th {
   color: #bbb;
   position: absolute;
   left: -0.5px;
+  top: 10px;
   transform: translateX(-50%);
   font-size: 0.9em;
   font-weight: 600;
   /* background: #f7f7f7; */
   z-index: 2;
-  margin-top: 7px;
-}
-
-.thead {
-  background: white;
-}
-
-.now {
-  position: absolute;
-  height: 100%;
-  border-right: 1px solid #de3c39;
-  z-index: 2;
-  top: 0;
-  pointer-events: none;
-  height: 9999em;
 }
