--- a/components/tables/TableRow.module.css
+++ b/components/tables/TableRow.module.css
@@ -1,30 +1,19 @@
-.table {
-  overflow-x: scroll;
-}
-
-.row {
-  border-bottom: 1px solid #f0f0f0;
-  display: flex;
-  flex-direction: row;
-  background: #f7f7f7;
-}
-
-.tableName {
+.firstTableCell {
   flex-shrink: 0;
   padding: 10px;
-  width: 150px;
   position: sticky;
   z-index: 3;
   left: 0;
   background: white;
-  margin-right: 20px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+  border-left: 3px solid transparent;
+  font-weight: 700;
 }
 
-.tableName::after {
+.firstTableCell::after {
   content: '';
   position: absolute;
   right: -5px;
@@ -39,6 +28,13 @@
   );
 }
 
+.thead {
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .cell {
   padding: 3px;
   flex-shrink: 0;
@@ -47,36 +43,14 @@
   min-height: 40px;
 }
 
-.cellInner {
-  border: 2px solid transparent;
-  cursor: pointer;
-  display: block;
-  height: 100%;
-  border-radius: 5px;
-}
-
-.cellInner:hover {
-  border-color: #1890ff;
-}
-
-.booking {
-  background: white;
-  border-radius: 5px;
-  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
-  position: relative;
-  padding: 10px;
-}
-
-.bookingTitle {
+.row {
+  border-bottom: 1px solid #f0f0f0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: -8px;
+  background: #f7f7f7;
+  min-width: fit-content;
 }
 
-.bookingTitle strong {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+.rowHead {
+  background: white;
 }
