--- a/components/tables/Slots.module.css
+++ b/components/tables/Slots.module.css
@@ -1,17 +1,34 @@
-.table {
-  overflow-x: scroll;
-  border-radius: 5px;
+.container {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
   position: relative;
 }
 
+.table {
+  overflow: scroll;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .th {
-  color: #bbb;
   position: absolute;
   left: -0.5px;
-  top: 10px;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
   transform: translateX(-50%);
   font-size: 0.9em;
   font-weight: 600;
-  /* background: #f7f7f7; */
   z-index: 2;
+}
+
+.areaFilter {
+  font-weight: normal;
+  max-width: 100%;
+  width: 100%;
 }
