--- a/components/tables/TableRow.module.css
+++ b/components/tables/TableRow.module.css
@@ -2,7 +2,7 @@
   flex-shrink: 0;
   padding: 10px;
   position: sticky;
-  z-index: 3;
+  z-index: 4;
   left: 0;
   background: white;
   display: flex;
@@ -53,4 +53,7 @@
 
 .rowHead {
   background: white;
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
