--- a/components/shared/Page.module.css
+++ b/components/shared/Page.module.css
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: row;
   padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .logo {
