--- a/components/tables/NowIndicator.module.css
+++ b/components/tables/NowIndicator.module.css
@@ -1,8 +1,8 @@
 .now {
   position: absolute;
-  height: 100%;
   border-right: 1px solid #de3c39;
   z-index: 3;
   top: 0;
+  bottom: 0;
   pointer-events: none;
 }
