--- a/components/tables/useReservationModal.module.css
+++ b/components/tables/useReservationModal.module.css
@@ -13,3 +13,33 @@
   padding-top: 10px;
   opacity: 0.5;
 }
+
+.otherBookings {
+  border-top: 1px solid #f0f0f0;
+  margin-top: 15px;
+}
+
+.otherBookings h3 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.otherBookings :global(.ant-list-item-meta-title) {
+  margin-bottom: -4px;
+}
+
+.otherBookings :global(.ant-list-item) {
+  padding: 6px 0;
+}
+
+.otherBookings :global(.ant-list-item-meta-avatar) {
+  font-weight: 500;
+  align-self: center;
+  margin-left: 4px;
+  min-width: 38px;
+  text-align: center;
+}
+
+.delete {
+  margin-top: 10px;
+}
