--- a/components/tables/useReservationModal.module.css
+++ b/components/tables/useReservationModal.module.css
@@ -43,3 +43,13 @@
 .delete {
   margin-top: 10px;
 }
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+.row > span {
+  margin-left: 8px;
+  margin-right: 8px;
+}
