--- a/components/products/ProductList.module.css
+++ b/components/products/ProductList.module.css
@@ -22,6 +22,8 @@
 
 .root :global(.ant-card-actions) :global(.ant-btn) {
   max-width: 100%;
+  width: 100%;
+  justify-content: center;
   display: flex;
   align-items: center;
 }
