--- a/components/products/RevenueDetails.module.css
+++ b/components/products/RevenueDetails.module.css
@@ -4,14 +4,16 @@
 }
 
 .innerTable :global(.ant-table) {
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .innerTable :global(.ant-table) .row td:global(.ant-table-cell),
 .innerTable :global(.ant-table) .row:hover td:global(.ant-table-cell) {
   background-color: transparent;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+  border-top-color: rgba(5, 5, 5, 0.06) !important;
+  border-bottom-color: rgba(5, 5, 5, 0.06) !important;
 }
 
 .chart {
@@ -21,8 +23,7 @@
   padding-right: 16px;
 }
 
-
 .innerTable :global(.ant-table) .row td:first-child,
 .innerTable :global(.ant-table) .row:hover td:first-child {
-  padding-left: 64px;
+  padding-left: 64px !important;
 }
