Squashed commit of the following:
commit 0853ca970356458237b4cb482de2ebca38138d83
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Jan 7 23:35:48 2023 +0000

    v5

commit 5383df34d988da14f4bfa0412a901cb0a3249c16
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Jan 7 23:02:17 2023 +0000

    fixx

commit 47bf4b8349804af6ae489cfae15f0c9835d9a93a
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Jan 7 22:39:19 2023 +0000

    pizzazz

commit b81bca575ee6d5880f4c1eef7edc7584919d826c
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Jan 7 17:04:13 2023 +0000

    ok

commit 37df1cbfadec41e4ea76c0359940d93113e719c7
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Nov 12 15:24:32 2022 +0000

    updates

commit 337fb86f6fc7ac0763b8a3e364e04310c2ce8d81
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sun Nov 6 16:54:57 2022 +0000

    v5

commit 2ae9e2de6440eccab1560a9d8bd1973ed0ce78b1
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Nov 5 17:39:13 2022 +0000

    updates

commit 62e1e99893597340c949e7464dc5a58bf2c01ae8
Author: Daniel Büchele <daniel@buechele.cc>
Date:   Sat Nov 5 14:37:30 2022 +0000

    antd-v5

--- a/components/shared/Page.module.css
+++ b/components/shared/Page.module.css
@@ -6,11 +6,18 @@
   display: flex;
   flex-direction: row;
   padding: 0;
+  padding-inline: 0 !important;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -31,6 +38,14 @@
   align-self: center;
   margin-right: 15px;
   cursor: pointer;
+}
+
+.padded {
+  padding: 15px;
+}
+
+.accessory > *{
+  margin-left: 12px;
 }
 
 @media print {
