--- a/components/products/EmojiPicker.module.css
+++ b/components/products/EmojiPicker.module.css
@@ -2,6 +2,13 @@
   margin-top: 4px;
 }
 
-.overlay :global(.ant-popover-inner-content) {
+.overlay :global(.ant-popover-inner) {
   padding: 0;
+}
+
+.spin {
+  width: 352px;
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
