--- a/components/booking/BandApplicationDetails.module.css
+++ b/components/booking/BandApplicationDetails.module.css
@@ -9,3 +9,20 @@
 .h4 {
     margin-bottom: 0;
 }
+
+.skeletonTitle :global(.ant-skeleton-title) {
+    margin: 4px 0;
+}
+
+.skeletonImage {
+    display: block !important;
+    margin-bottom: 20px;
+}
+
+.skeletonImage :global(.ant-skeleton-image) {
+    width: 100% !important;
+    height: auto !important;
+    padding-top: 70px;
+    padding-bottom: 40px;
+    text-align: center;
+}
