--- a/components/booking/BandApplicationDetails.module.css
+++ b/components/booking/BandApplicationDetails.module.css
@@ -37,6 +37,26 @@
     max-width: 1100px;
 }
 
+.social {
+    margin-bottom: 20px;
+}
+
 .firstHeading {
     margin-top: 0;
+}
+
+.titleGroup {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-left: 2px
+}
+
+.title {
+    margin: 0 !important;
+    line-height: 1 !important;
+}
+
+.subTitle {
+    font-weight: normal;
 }
