--- a/components/booking/BandApplicationDetails.module.css
+++ b/components/booking/BandApplicationDetails.module.css
@@ -1,36 +1,7 @@
-.row {
-    margin-bottom: 24px;
-}
-
-.row h4 {
-    display: inline;
-}
-
-.h4 {
-    margin-bottom: 0;
-}
-
 .skeletonTitle :global(.ant-skeleton-title) {
-    margin: 4px 0;
-}
-
-.skeletonImage {
-    display: block !important;
-    margin-bottom: 20px;
-}
-
-.skeletonImage :global(.ant-skeleton-image) {
-    width: 100% !important;
-    height: auto !important;
-    padding-top: 70px;
-    padding-bottom: 40px;
-    text-align: center;
-}
-
-.copyEmail {
-    padding: 0 !important;
-    border: 0 !important;
-    height: auto !important;
+    max-width: 400px;
+    width: 50%;
+    margin-top: 12px;
 }
 
 .modal {
@@ -49,7 +20,8 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding-left: 2px
+    padding-left: 2px;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -58,5 +30,21 @@
 }
 
 .subTitle {
+    font-weight: normal;
+}
+
+.map {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.mapInner {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.inlineHeading {
     font-weight: normal;
 }
