--- a/components/contactless/ProductRow.module.css
+++ b/components/contactless/ProductRow.module.css
@@ -1,15 +1,21 @@
 .root {
-  border-top: 1px solid #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid #f0f0f0;
   padding: 6px 12px;
   margin-left: -12px;
   margin-right: -12px;
-  display: flex;
-  align-items: center;
 }
 
-.root :global(.ant-input):not(:hover),
-.root :global(.ant-input-affix-wrapper):not(:hover) {
-  border-color: transparent;
+.container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.row {
+  align-items: center;
+  display: flex;
 }
 
 .root :global(.ant-input:focus),
@@ -23,12 +29,17 @@
 
 .index {
   font-weight: 500;
-  background: #eee;
+  background: #f9f9f9;
+  border: 1px solid #d9d9d9;
   border-radius: 5px;
-  min-width: 26px;
-  padding: 2px 0;
+  width: 30px;
+  padding: 3px 0;
   text-align: center;
-  margin-right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  flex-grow: 0;
 }
 
 .deposit {
